fix: in dark mode contrast of select boxes was too low

--- a/packages/web-component/src/scss/modules/_settings.scss
+++ b/packages/web-component/src/scss/modules/_settings.scss
@@ -148,6 +148,8 @@
   }
 }
 
+.settings.theme--dark select,
+.settings.theme--dark select option,
 .settings.theme--dark {
   color: #fff;
 }
